# azure-cleanroom-1

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yml  .prettierignore  Directory.Build.props  Directory.Packages.props  Menees.Analyzers.Settings.xml  README.md  SUPPORT.md  go.mod  go.sum  policy.json  pyproject.toml  stylecop.json
.devcontainer/: devcontainer.json
.github/compliance/: inventory.yml
.github/scripts/: cleanup.ps1  release-ccf-artefact-version-document.ps1  release-ccr-version-document.ps1  release-governance-client-version-documents.ps1  verify-attestation.ps1
.github/workflows/: black.yml  cleanup_stale_bvt_resources.yml  cleanup_stale_pr_resources.yml  official_build.yml  pr_ccf.yml  pr_cgs_tests.yml  pr_multi_party_collab_samples.yml  release-and-test-nightly-trigger.yml  release-and-test.yml  release.yml  release_verification_nightly.yml  test_workflow.yaml
azure/: ccfStorageAccount.bicep
docs/: cleanroomspec.md  setup.md  skr.md
infra/aci/: aci-base-arm-template.json  generate_arm_template.py
outdated/docs/: README.md  (+3 more)
scripts/: check-format.sh  ci-checks.sh  deploy_minimal_ccf.sh
src/governance/ccf-app/cpp/: CMakeLists.txt
src/governance/ccf-app/cpp/app/: checks.h  js_extensions.cpp  js_extensions.h  js_generic.cpp
src/governance/ccf-app/cpp/crypto/: README.md  certs.h  key_pair.cpp  key_pair.h
src/governance/ccf-app/cpp/crypto/openssl/: hash.h  key_pair.cpp  key_pair.h  openssl_wrappers.h  public_key.cpp  public_key.h  x509_time.h
test/: run-tests-and-upload-results.ps1  wait-for-tests.ps1
(+1029 files in other folders)
